@startuml GridSystemV2

interface GridLayout <<MonoBehaviour>> {
    + Origin : Vector3
    + Rotation : Quaternion
    + CellSize : Vector2
    - layout : IGridLayout

    + WorldToGrid(worldPosition : Vector3) : Vector2Int
    + GridToWorld(gridPosition : Vector2Int) : Vector3
    + GetCellCenter(cellPosition : Vector2Int) : Vector3
    + SnapToCell(worldPosition : Vector3) : Vector3
    + SnapToCellCenter(worldPosition : Vector3) : Vector3
    + GetSubgridCenter(bottomLeft : Vector2Int, subgridDimensions : Vector2Int) : Vector3
    + GetSubgridBottomLeft(subgridCenter : Vector3, subgridDimensions : Vector2Int) : Vector2Int
    + GetPositionsInSubgrid(bottomLeft : Vector2Int, subgridDimensions : Vector2Int) : List<Vector2Int>
    + RaycastGridPlane(ray : Ray) : Vector3
    + SetCellSize(length : float, width : float) : void
    + SetOrigin(origin : Vector3) : void
    + SetRotation(rotation : Quaternion) : void
}

class SquareGridLayout implements IGridType {
    + WorldToGrid(worldPosition : Vector3) : Vector2Int
    + GridToWorld(gridPosition : Vector2Int) : Vector3
    + GetCellCenter(cellPosition : Vector2Int) : Vector3
}

class HexGridLayout implements IGridType {
    + WorldToGrid(worldPosition : Vector3) : Vector2Int
    + GridToWorld(gridPosition : Vector2Int) : Vector3
    + GetCellCenter(cellPosition : Vector2Int) : Vector3
}

interface IGridType {
    + WorldToGrid(worldPosition : Vector3) : Vector2Int
    + GridToWorld(gridPosition : Vector2Int) : Vector3
    + GetCellCenter(cellPosition : Vector2Int) : Vector3
}

interface ISearchable {
    GetNeighbors(Vector2Int cellPosition) : List<Vector2Int>
}

class GridBFS {
    + FindPath(grid : ISearchable, startPosition : Vector2Int, goalCondition, isWalkableCell) : List<Vector2Int>
}

class CellGrid<T> implements ISearchable {
    + Columns : int
    + Rows : int
    - cells : Cell<T>[,]

    + CellGrid(columns : int, rows : int)
    + PlaceObject(object : T, startCell : Cell, shapeLayout : List<Vector2Int>) : void
    + PlaceObject(object : T, startCell : Cell) : void
    + RemoveObject(cellPosition : Vector2Int) : void
    + MoveObject(from : Vector2Int, to : Vector2Int) : void
    + GetObjectAt(cellPosition : Vector2Int) : T
    + GetObjectAsType<V>(cellPosition : Vector2Int) : V
    + GetAllPlacedObjects() : List<T>
    + GetSharedPositions(cellPosition : Vector2Int) : List<Vector2Int>
    + GetObjectOrigin(cellPosition : Vector2Int) : Vector2Int
    + PositionIsOccupied(cellPosition : Vector2Int) : bool
    + AllPositionsAreFree(positions : List<Vector2Int>) : bool
    + CellWithinBounds(cellPosition : Vector2Int) : bool
    + GetNeighbors(cellPosition : Vector2Int) : List<Vector2Int>
    + FindPath(startCell : Vector2Int, endCell : Vector2Int) : List<Vector2Int>
}

class Cell<T>{
    - row : int
    - column : int
    - state : CellState
    - occupyingObject : T
    - sharedCells : List<Cell<T>>
    - occupyingObjectOrigin : Vector2Int
    
    + Cell(row : int, column : int, state : CellState)
    + GetState() : CellState
    + GetOccupyingObject() : T
    + SetOccupyingObject(occupyingObject : T) : void
    + SetOccupyingObject(occupyingObject : T, objectOriginCell : Vector2Int, sharedCells : List<Cell<T>>) : void
    + GetSharedCells() : List<Cell<T>>
    + GetOccupyingObjectOrigin() : Vector2Int
    + RemoveOccupyingObject() : void
    + GetCellCoordinates() : Vector2Int
    + IsOccupied() : bool
}

enum CellState{
    EMPTY
    OCCUPIED
}

CellGrid "1" -- "0..*" Cell : contains
CellGrid --> GridBFS : uses
GridLayout "1" -- "1" IGridType : has
Cell --> CellState : has


@enduml